--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>ANNIA J. FLORES</title>
+    <title>Annia J. Flores | Front-end Developer Lima, Peru</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
 </head>
