--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,42 @@
     <title>Annia J. Flores | Front-end Developer Lima, Peru</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Anton|Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <nav class="navbar row">
+                <div class="navbar-header col-md-4">
+                    <a class="navbar-brand" href="#">A</a>
+                </div>
+                <ul class="nav navbar-nav col-md-8">
+                    <li><a href="#">TRABAJOS</a></li>
+                    <li><a href="#">SOBRE MÍ</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </nav>
+            <div class="row">
+                <div class="header__pic col-md-4">
+                    <img class="img-responsive" src="img/home_border.png" alt="Annia J. Flores">
+                </div>
+                <div class="header__info col-md-8 text-center">
+                    <div class="col-md-8">
+                        <p>HOLA! SOY</p>
+                        <p>ANNIA J. FLORES</p>
+                        <p>FRONT-END DEVELOPER</p>
+                    </div>
+                    <div class="col-md-8">
+                        <button class="header__button--download btn btn-default btn-lg">DESCARGAR CV</button>
+                        <button class="header__button btn btn-default btn-lg">VER TRABAJOS</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bundle.js"></script>
 </body>
