--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,27 @@
             </div>
         </div>
     </header>
+    <section id="trabajos" class="trabajos">
+        <div class="container">
+            <h2 class="text-center">TRABAJOS</h2>
+            <div class="row">
+                <div class="trabajos__box--dark col-md-6">
+                    <h3>PROYECTO</h3>
+                </div>
+                <div class="trabajos__box--light col-md-6">
+                    <h3>PROYECTO</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="trabajos__box--light col-md-6">
+                    <h3>PROYECTO</h3>
+                </div>
+                <div class="trabajos__box--dark col-md-6">
+                    <h3>PROYECTO</h3>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="bundle.js"></script>
 </body>
