--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <!-- Open Graph-->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://itsandromeda.heroku.com">
-    <meta property="og:image" content="assets/img/annia_j_flores_thumbnail.png">
+    <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
     <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portafolio">
     <meta property="og:description" content="Front-end Developer egresada de Laboraroria en Lima, Perú.">
@@ -19,8 +19,10 @@
     <meta name="twitter:site" content="@AnniaJFlores">
     <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
     <meta name="twitter:description" content="Front-end Developer egresada de Laboraroria en Lima, Perú.">
-    <meta name="twitter:image" content="assets/img/annia_j_flores_thumbnail.png">
+    <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.heroku.com">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap -->
     <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- Google fonts -->
@@ -32,14 +34,14 @@
 <body>
     <div class="wrapper">
         <header class="home">
-            <section class="parallax-section text-center">
+            <section class="container parallax-section text-center">
                 <nav id="navbar" class="navbar">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="#">A</a>
                         <div class="home__lang">
                             <a href="index.html">ES </a>
                             <span> / </span>
-                            <a href="#">ENG</a>
+                            <a href="index-eng.html">ENG</a>
                         </div>
                     </div>
                     <div class="home__sections">
@@ -56,10 +58,38 @@
                     <form target="_blank" method="get" action="/annia-j-flores_resume.pdf">
                         <button class="btn home__button" type="submit">Descargar CV</button>
                     </form>
-
                 </div>
             </section>
         </header>
+        <section id="work" class="small-grid">
+            <div class="container">
+                <h2>TRABAJOS RECIENTES</h2>
+                <div class="row">
+                    <div class="small-grid__box--dark col-md-6">
+                        <h3>WANDERLUST</h3>
+                        <p>Plataforma que te permite crear pinboards con fotos y videos. Ganador de un reconocimiento por innovación en Laboratoria.</p>
+                        <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
+                    </div>
+                    <div class="small-grid__box--light col-md-6">
+                        <h3>PINTEREST</h3>
+                        <p>Recreación de la plataforma original trayendo datos del API de la misma.</p>
+                        <button class="btn">jQuery, Pinterest API, GULP &amp; SASS</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="small-grid__box--light col-md-6">
+                        <h3>TRELLO</h3>
+                        <p>Réplica de la web original que te permite organizar proyectos en boards, listas y tarjetas. Me hizo ganadora de un reconocimiento en Laboratoria.</p>
+                        <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
+                    </div>
+                    <div class="small-grid__box--dark col-md-6">
+                        <h3>PORTAFOLIO</h3>
+                        <p>El proceso creativo y desarrollo de este portafolio, donde hice uso de la mayoría de herramientas aprendidas en Laboratoria.</p>
+                        <button class="btn">JavaScript, Bootstrap, GULP &amp; SASS</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
