--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -3,23 +3,23 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Front-end Developer egresada de Laboraroria en Lima, Perú</title>
+    <title>Annia J. Flores | Laboratoria graduate Front-end Developer in Lima, Peru.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
     <!-- Open Graph-->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://itsandromeda.heroku.com">
-    <meta property="og:image" content="assets/img/annia_j_flores_thumbnail.png">
+    <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
     <meta property="og:title" content="Annia J. Flores, Front-end Developer">
-    <meta property="og:site_name" content="Portafolio">
-    <meta property="og:description" content="Front-end Developer egresada de Laboraroria en Lima, Perú.">
+    <meta property="og:site_name" content="Portfolio">
+    <meta property="og:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
     <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
-    <meta name="twitter:description" content="Front-end Developer egresada de Laboraroria en Lima, Perú.">
-    <meta name="twitter:image" content="assets/img/annia_j_flores_thumbnail.png">
+    <meta name="twitter:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
+    <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.heroku.com">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,14 +34,14 @@
 <body>
     <div class="wrapper">
         <header class="home">
-            <section class="parallax-section text-center">
+            <section class="container parallax-section text-center">
                 <nav id="navbar" class="navbar">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="#">A</a>
                         <div class="home__lang">
                             <a href="index.html">ES </a>
                             <span> / </span>
-                            <a href="#">ENG</a>
+                            <a href="index-eng.html">ENG</a>
                         </div>
                     </div>
                     <div class="home__sections">
@@ -56,12 +56,40 @@
                     <h1>ANNIA</h1>
                     <p>FRONT - END DEVELOPER, LIMA - PERU</p>
                     <form target="_blank" method="get" action="/annia-j-flores_resume.pdf">
-                        <button class="btn home__button" type="submit">Download Resume</button>
+                        <button class="btn home__button" type="submit">Download CV</button>
                     </form>
-
                 </div>
             </section>
         </header>
+        <section id="work" class="small-grid">
+            <div class="container">
+                <h2>RECENT WORK</h2>
+                <div class="row">
+                    <div class="small-grid__box--dark col-md-6">
+                        <h3>WANDERLUST</h3>
+                        <p>Web platform built in 48 hours from idea to product that allows you to create pinboards and upload video and image files. Winner project of innovation in Laboratoria.</p>
+                        <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
+                    </div>
+                    <div class="small-grid__box--light col-md-6">
+                        <h3>PINTEREST</h3>
+                        <p>Pinterest replica filled with data from a particular board accessed through the Pinterest API.</p>
+                        <button class="btn">jQuery, Pinterest API, GULP &amp; SASS</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="small-grid__box--light col-md-6">
+                        <h3>TRELLO</h3>
+                        <p>Trello clone that allowes you to organize projects through boards, lists and cards. I won a Laboratoria badge for the most proactive on the sprint thanks to this project.</p>
+                        <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
+                    </div>
+                    <div class="small-grid__box--dark col-md-6">
+                        <h3>PORTAFOLIO</h3>
+                        <p>Creative &amp; development process of my personal portfolio, where I used most of the tools learned in Laboratoria.</p>
+                        <button class="btn">JavaScript, Bootstrap, GULP &amp; SASS</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
