--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Annia J. Flores | Front-end Developer egresada de Laboratoria en Lima, Perú</title>
+    <title>Annia J. Flores | Front-end Developer egresada de Laboratoria en Lima, Perú.</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
     <meta name="author" content="@AnniaJFlores">
@@ -13,12 +13,12 @@
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
     <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portafolio">
-    <meta property="og:description" content="Front-end Developer egresada de Laboratoria en Lima, Perú.">
+    <meta property="og:description" content="Front-end Developer egresada de Laborat547oria en Lima, Perú.">
     <!-- twitter card-->
     <meta name="twitter:card" content="@AnniaJFlores">
     <meta name="twitter:site" content="@AnniaJFlores">
     <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
-    <meta name="twitter:description" content="Front-end Developer egresada de Laboratoria en Lima, Perú.">
+    <meta name="twitter:description" content="Front-end Developer egresada de Laborat547oria en Lima, Perú.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
     <meta name="twitter:url" content="https://itsandromeda.heroku.com">
     <!-- Font Awesome -->
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="small-grid__box--dark col-md-6">
                         <h3>WANDERLUST</h3>
-                        <p>Plataforma que te permite crear pinboards con fotos y videos. Ganador de un reconocimiento por innovación en Laboratoria.</p>
+                        <p>Plataforma desarrollada en 48 horas de idea a producto que te permite crear pinboards con fotos y videos. Ganador de un reconocimiento por innovación en Laboratoria.</p>
                         <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--light col-md-6">
