--- a/src/index-eng.html
+++ b/src/index-eng.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="small-grid__box--dark col-md-6">
                         <h3>WANDERLUST</h3>
-                        <p>Web platform built in 48 hours from idea to product that allows you to create pinboards and upload video and image files. Winner project of innovation in Laboratoria.</p>
+                        <p>Web platform built in 48 hours from idea to product that allows you to create pinboards and upload video and image files. Winning project of innovation in Laboratoria.</p>
                         <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--light col-md-6">
@@ -79,11 +79,11 @@
                 <div class="row">
                     <div class="small-grid__box--light col-md-6">
                         <h3>TRELLO</h3>
-                        <p>Trello clone that allowes you to organize projects through boards, lists and cards. I won a Laboratoria badge for the most proactive on the sprint thanks to this project.</p>
+                        <p>Trello clone that allows you to organize projects through boards, lists and cards. I won a Laboratoria MOST PROACTIVE badge on the sprint thanks to this project.</p>
                         <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--dark col-md-6">
-                        <h3>PORTAFOLIO</h3>
+                        <h3>PORTFOLIO</h3>
                         <p>Creative &amp; development process of my personal portfolio, where I used most of the tools learned in Laboratoria.</p>
                         <button class="btn">JavaScript, Bootstrap, GULP &amp; SASS</button>
                     </div>
