--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="small-grid__box--dark col-md-6">
                         <h3>WANDERLUST</h3>
-                        <p>Plataforma desarrollada en 48 horas de idea a producto que te permite crear pinboards con fotos y videos. Ganador de un reconocimiento por innovación en Laboratoria.</p>
+                        <p>Plataforma desarrollada en 48 horas de idea a producto, la cual te permite crear pinboards con fotos y videos. Ganador de un reconocimiento por innovación en Laboratoria.</p>
                         <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--light col-md-6">
