--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -24,7 +24,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap -->
-    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Anton|Open+Sans+Condensed:300,300i,700" rel="stylesheet">
     <link rel="icon" href="img/icon_annia.png">
@@ -46,17 +46,19 @@
                     </div>
                     <div class="home__sections">
                         <ul class="nav navbar-nav">
-                            <li><a href="#">WORK</a></li>
-                            <li><a href="#">ABOUT ME</a></li>
-                            <li><a href="#">CONTACT</a></li>
+                            <li><a class="work" href="#work">WORK</a></li>
+                            <li><a class="about" href="#about">ABOUT ME</a></li>
+                            <li><a class="contact" href="#contact">CONTACT</a></li>
                         </ul>
                     </div>
                 </nav>
                 <div class="home__inner">
-                    <h1>ANNIA</h1>
+                    <div class="home__logo">
+                        <img class="img-responsive" src="img/annia.png" alt="Annia">
+                    </div>
                     <p>FRONT - END DEVELOPER, LIMA - PERU</p>
                     <form target="_blank" method="get" action="/annia-j-flores_resume.pdf">
-                        <button class="btn home__button" type="submit">Download CV</button>
+                        <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
                 </div>
             </section>
@@ -67,7 +69,7 @@
                 <div class="row">
                     <div class="small-grid__box--dark col-md-6">
                         <h3>WANDERLUST</h3>
-                        <p>Web platform built in 48 hours from idea to product that allows you to create pinboards and upload video and image files. Winning project of innovation in Laboratoria.</p>
+                        <p>Web platform built in 48 hours from idea to product that allows you to create pinboards and upload video and image files. Winning project of innovation in Laboratoria's X Project challenge .</p>
                         <button class="btn">HTML5, CSS3 &amp; JavaScript</button>
                     </div>
                     <div class="small-grid__box--light col-md-6">
@@ -91,7 +93,7 @@
             </div>
         </section>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bundle.js"></script>
 </body>
