resume link update

--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -9,7 +9,7 @@
     <meta name="author" content="@AnniaJFlores">
     <!-- Open Graph-->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://itsandromeda.heroku.com">
+    <meta property="og:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
     <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portfolio">
@@ -20,7 +20,7 @@
     <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
     <meta name="twitter:description" content="Laboratoria graduate Front-end Developer in Lima, Peru.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
-    <meta name="twitter:url" content="https://itsandromeda.heroku.com">
+    <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index-eng.html">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap -->
