--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="@AnniaJFlores">
     <!-- Open Graph-->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://itsandromeda.heroku.com">
+    <meta property="og:url" content="https://itsandromeda.github.io/Portfolio/public/index.html">
     <meta property="og:image" content="img/annia_j_flores_thumbnail.png">
     <meta property="og:title" content="Annia J. Flores, Front-end Developer">
     <meta property="og:site_name" content="Portafolio">
@@ -20,7 +20,7 @@
     <meta name="twitter:title" content="Annia J. Flores, Front-end Developer">
     <meta name="twitter:description" content="Front-end Developer egresada de Laboratoria en Lima, Perú.">
     <meta name="twitter:image" content="img/annia_j_flores_thumbnail.png">
-    <meta name="twitter:url" content="https://itsandromeda.heroku.com">
+    <meta name="twitter:url" content="https://itsandromeda.github.io/Portfolio/public/index.html">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google fonts -->
@@ -55,7 +55,7 @@
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
                     <p class="hidden-xs">FRONT - END DEVELOPER, LIMA - PERÚ</p>
-                    <form target="_blank" method="get" action="/annia-j-flores_resume.pdf">
+                    <form target="_blank" method="get" action="public/annia-j-flores_resume.pdf">
                         <button class="btn home__button animate-flicker" type="submit">Descargar CV</button>
                     </form>
                 </div>
