--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -57,7 +57,7 @@
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
                     <p class="hidden-xs">FRONT - END DEVELOPER, LIMA - PERU</p>
-                    <form target="_blank" method="get" action="/annia-j-flores_resume.pdf">
+                    <form target="_blank" method="get" action="Portfolio/annia-j-flores_resume.pdf">
                         <button class="btn home__button animate-flicker" type="submit">Download CV</button>
                     </form>
                 </div>
