--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
                         <img class="img-responsive" src="img/annia.png" alt="Annia">
                     </div>
                     <p class="hidden-xs">FRONT - END DEVELOPER, LIMA - PERÚ</p>
-                    <form target="_blank" method="get" action="Portfolio/annia-j-flores_resume.pdf">
+                    <form target="_blank" method="get" action="https://itsandromeda.github.io/Portfolio/annia-j-flores_resume.pdf">
                         <button class="btn home__button animate-flicker" type="submit">Descargar CV</button>
                     </form>
                 </div>
