Recent projects description

--- a/public/index-eng.html
+++ b/public/index-eng.html
@@ -66,6 +66,7 @@
         <section id="work" class="small-grid">
             <div class="container-fluid">
                 <h2>RECENT PROJECTS</h2>
+                <p>These are just some of the projects I developed during my time in Laboratoria, you can see more on <a href="https://github.com/itsandromeda" target="_blank">my GitHub</a>.</p>
                 <div class="row">
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>WANDERLUST</h3>
@@ -99,12 +100,15 @@
                     <div class="col-xs-12 col-md-3">
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                     </div>
-                    <div class="col-xs-12 col-md-5">
+                    <div class="col-xs-12 col-md-9">
                         <p>Hello! My name is Annia, I'm a front-end developer &amp; Laboratoria graduate currently living in Lima, Peru.</p>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-xs-12 col-md-4">
                         <h3>Skill set</h3>
                     </div>
+
                 </div>
             </div>
         </section>
