--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
         <section id="work" class="small-grid">
             <div class="container-fluid">
                 <h2>TRABAJOS RECIENTES</h2>
+                <p>Estos son solo algunos de los trabajos que desarrollé en Laboratoria, puedes ver más en mi perfil de <a href="https://github.com/itsandromeda" target="_blank">GitHub</a>.</p>
                 <div class="row">
                     <div class="small-grid__box--dark col-xs-12 col-md-6">
                         <h3>WANDERLUST</h3>
@@ -97,12 +98,15 @@
                     <div class="col-xs-12 col-md-3">
                         <img class="img-circle img-responsive" src="img/annia_j_flores_about_me_thumbnail.jpg" alt="Annia J. Flores avatar">
                     </div>
-                    <div class="col-xs-12 col-md-5">
+                    <div class="col-xs-12 col-md-9">
                         <p>¡Hola! Mi nombre es Annia, soy una front-end developer egresada de la 6° promoción del bootcamp de Laboratoria, actualmente residiendo en Lima, Perú.</p>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-xs-12 col-md-4">
                         <h3>Skill set</h3>
                     </div>
+
                 </div>
             </div>
         </section>
